# acople

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.es.md  README.fr.md  README.md  pyproject.toml
acople/: __init__.py  bridge.py  cli.py  image_bridge.py  security.py  server.py  session.py  ui.html
tests/: conftest.py  test_bridge_core.py  test_cli.py  test_concurrency.py  test_fase1_setup.py  test_fase2_deteccion.py  test_fase3_api.py  test_fase4_errores.py  test_fase5_docs.py  test_fase6_extras.py  test_image_api.py  test_image_bridge.py  test_integracion.py  test_process_lifecycle.py  test_security.py  test_sessions.py  test_streaming.py
