[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acople"
version = "1.1.0"
description = "Universal bridge to IDE AI agents (Claude Code, Gemini CLI, Codex, OpenCode, etc)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Acople", email = "hello@acople.dev" }
]
keywords = ["ai", "agent", "claude", "opencode", "codex", "gemini", "bridge", "connector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
all = [
    "acople[server,dev]",
]

[project.scripts]
acople = "acople.cli:main"

[project.urls]
Homepage = "https://github.com/mutant-77/acople"
Repository = "https://github.com/mutant-77/acople"

[tool.hatch.build.targets.wheel]
packages = ["acople"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]